fix: shift key behaviour and language key style

--- a/src/sass/abstract/_constants.scss
+++ b/src/sass/abstract/_constants.scss
@@ -1,4 +1,4 @@
-$color-primary: #664422;
+$color-language: #b8b2ad;
 
 $color-textfield-boarder: #f1ead3;
 $color-textfield-filler: #f1ead3;
@@ -12,4 +12,4 @@ $color-key-boarder: #e2e2e2;
 $color-key-boarder-light: #ebebeb;
 $color-key-filler: #bac7ba;
 $color-key-filler-light: #bac7ba40;
-$color-key-filler-on: #cc8b00d3;
+$color-key-filler-on: #c7911dd3;
