--- a/src/sass/layouts/_keyboard.scss
+++ b/src/sass/layouts/_keyboard.scss
@@ -103,3 +103,7 @@
 #ControlRight {
     min-width: 45px;
 }
+
+#MetaLeft {
+    background-color: $color-language;
+}
